NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -221,11 +221,12 @@ before installing Mylyn 3.0.</p>
 <table cellpadding="10" cellspacing="0" id="table415">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Improved Tooltip UI</b></p>
+			<p align="right"><b>Improved Notification and Tooltip UI</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">Change notifications and tooltips to use a gradient for the background to improve their visual appearance.</p>
 			<p class="MsoPlainText">
+			<img border="0" src="images/3.2.0/incoming-notification.png">
 			<img border="0" src="images/3.2.0/tooltips.png"></td>
 		</tr>
 		<tr>
@@ -233,6 +234,24 @@ before installing Mylyn 3.0.</p>
 			<hr>
 			</td>
 		</tr>
+		
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Toggle Auto Synchronization per Query</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Toggle whether a query is included in automatic background query synchronizations. Right click on the desired query and deselect "Synchronize Auautomatically" to ensure this repository does not get synchronized in the background.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.2.0/synchronize-automatically.png">
+			</td>
+		</tr>
+		
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+		
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Improved Sorting Capability</b></p>
@@ -259,7 +278,7 @@ before installing Mylyn 3.0.</p>
 			<td valign="top" width="70%">
 			<p align="left">The appearance of the editor for local and repository tasks has been streamlined and unified. Connector authors can now enable repositioning of the personal planning controls and notes to be folded into a new Private section within the repository task editor page itself.</p>
 			<p class="MsoPlainText">
-			<img border="0" src="images/3.2.0/private-section.png"></td>
+			<img border="0" src="images/3.2.0/task-editor.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
