NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -240,7 +240,7 @@ before installing Mylyn 3.0.</p>
 			<p align="right"><b>Toggle Auto Synchronization per Query</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">Toggle whether a query is included in automatic background query synchronizations. Right click on the desired query and deselect "Synchronize Auautomatically" to ensure this repository does not get synchronized in the background.</p>
+			<p align="left">Toggle whether a query is included in automatic background query synchronizations. Right click on the desired query and deselect "Synchronize Automatically" to ensure this repository does not get synchronized in the background.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/synchronize-automatically.png">
 			</td>
