--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -176,7 +176,7 @@ before installing Mylyn 3.0.</p>
 <table cellpadding="10" cellspacing="0" id="table415">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Connector install Wizard</b></p>
+			<p align="right"><b>Connector Install Wizard</b></p>
 			</td>
 			<td valign="top" width="70%">
 			<p align="left">From the Add Task Repository dialog you can access the Connector Discovery wizard for simple installation of Mylyn extensions. To lauch the Connector Discovery wizard, open the Task Repositories view and click the New Repository button. In the resulting dialog, click the "Install More Connectors..." button to launch Connector Discovery.  For information on how connectors are made available via the Connector Discovery mechanism stay tuned to the <a href="https://dev.eclipse.org/mailman/listinfo/mylyn-integrators">Mylyn Integrators</a> mailing list.</p>
