--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -146,6 +146,7 @@
 <h4>Draft Mylyn 3.2 New and Noteworthy</h4>
 
 <p><b>Also see the New &amp; Noteworthy for: 
+<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a>,
 <a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
 <a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
 <a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
