NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -359,6 +359,11 @@ before installing Mylyn 3.0.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/wikitext-pdfexport.png"></td>
 		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
 </table>
 
 <h2><a name="task-list">JIRA Connector</a></h2>
