NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-3.0.html
+++ b/new/new-3.0.html
@@ -160,7 +160,7 @@ before installing Mylyn 3.0.</p>
 	<li><a href="#task-editor">Task Editor (3)</a></li>
 	<li><a href="#focused-ui">Focused UI (3)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (3)</a></li>
-	<li><a href="#trac">Trac Connector</a></li>
+	<li><a href="#trac">Trac Connector (2)</a></li>
 	<li><a href="#jira">JIRA Connector (1)</a></li>
 	<li><a href="#incubator">Incubator (1)</a></li>
 </ul>
