NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -366,7 +366,7 @@ before installing Mylyn 3.0.</p>
 		</tr>
 </table>
 
-<h2><a name="task-list">JIRA Connector</a></h2>
+<h2><a name="jira">JIRA Connector</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table403">
 		<tr>
@@ -377,6 +377,39 @@ before installing Mylyn 3.0.</p>
 			<p align="left">The Task Editor supports adding work log entries.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/jira-worklog.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<h2><a name="trac">Trac Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table403">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Trac 0.11</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">The Trac Connector now supports Trac 0.11 if the latest version of Trac's <a href="http://trac-hacks.org/wiki/XmlRpcPlugin" target="_blank">XmlRpcPlugin</a> is installed on the repository.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.2.0/trac-workflow.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Select Owner from Drop-down</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">The Task Editor shows a drop-down for re-assigning tickets if <code>restrict_owner</code> is enabled for a repository.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.2.0/trac-usermatch.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
