--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -355,7 +355,7 @@ before installing Mylyn 3.0.</p>
 			<p align="right"><b>WikiText to PDF</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">The WikiText component now supports export to XSL Formatting Objects (XSL-FO) and PDF in addition to the other formats curretly supported (HTML, Eclipse Help, DocBook, DITA) </p>
+			<p align="left">The WikiText component now supports export to XSL Formatting Objects (XSL-FO) and PDF in addition to the other formats currently supported (HTML, Eclipse Help, DocBook, DITA) </p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/wikitext-pdfexport.png"></td>
 		</tr>
