NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -187,7 +187,7 @@ before installing Mylyn 3.2.</p>
 			<p align="right"><b>Optimized Toolbar</b></p>
 			</td>
 			<td valign="top" width="70%">
-			<p align="left">The Task Editor's toolbar has been updated.  The most used actions are now located in the corners Activate (left) and Submit (right) with other repository actions available next to the Submit button in the toolbar.  The task type and id can now be selected and copied using native key bindings.</p>
+			<p align="left">The Task Editor's toolbar has been updated.  The most used actions are now located in the corners Activate (left) and Submit (right) with other repository actions available next to the Submit button in the toolbar. The Alt-S keybinding can now be used to submit changes in the task editor. The task type and id can now be selected and copied using native key bindings.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/task-editor-toolbar.png"></td>
 		</tr>
