--- a/new/new.html
+++ b/new/new.html
@@ -55,17 +55,16 @@ before installing Mylyn 3.2.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.2</span> </p>
 <ul>
-	<li><a href="#connector-discovery">Connector Discovery</a></li>
-	<li><a href="#bug-reporting">Integrated Bug Reporting</a></li>
-	<li><a href="#help">Help and Internationalization</a></li>
-	<li><a href="#task-editor">Task Editor</a></li>
-	<li><a href="#task-list">Task List</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
-	<li><a href="#jira">JIRA Connector</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector</a></li>
-	<li><a href="#trac">Trac Connector</a></li>
-	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
-	<li><a href="#framework">Framework and API</a></li>
+	<li><a href="#connector-discovery">Connector Discovery (1)</a></li>
+	<li><a href="#general">General (2)</a></li>
+	<li><a href="#task-editor">Task Editor (6)</a></li>
+	<li><a href="#task-list">Task List (4)</a></li>
+	<li><a href="#task-focused-interface">Task-Focused Interface (1)</a></li>
+	<li><a href="#wikitext">WikiText (2)</a></li>
+	<li><a href="#jira">JIRA Connector (2)</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector (1)</a></li>
+	<li><a href="#trac">Trac Connector (2)</a></li>
+	<li><a href="#framework">Framework and API (2)</a></li>
 </ul>
 
 <!--
@@ -81,6 +80,7 @@ before installing Mylyn 3.2.</p>
 </ul>
 -->
 
+<p>&nbsp;</p>
 <h2><a name="connector-discovery">Connector Discovery</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table415">
@@ -100,12 +100,13 @@ before installing Mylyn 3.2.</p>
 		</tr>
 </table>
 
-<h2><a name="bug-reporting">Integrated Bug Reporting</a></h2>
+<p>&nbsp;</p>
+<h2><a name="general">General</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table415">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Report from Error log</b></p>
+			<p align="right"><b>Integrated Bug Reporting</b></p>
 			</td>
 			<td valign="top" width="85%">
 			<p align="left">If you choose to report an error from the Error Log by right clicking and selecting Report as Bug, the appropriate repository will be chosen to file the bug against for you. </p>
@@ -137,9 +138,6 @@ before installing Mylyn 3.2.</p>
 			</td>
 		</tr>
 </table>
-
-<p>&nbsp;</p>
-<h2><a name="help">Help and Internationalization</a></h2>
 
 <table cellpadding="10" cellspacing="0" id="table414">
 		<tr>
@@ -524,6 +522,46 @@ before installing Mylyn 3.2.</p>
 		</tr>
 </table>
 
+
+<p>&nbsp;</p>
+<h2><a name="task-focused-interface">Task-Focused Interface</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Hidden Context Members</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">The context page of the Task Editor shows elements that can not be presented in the common navigator in a separate table.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.2.0/context-hidden-elements.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table409">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#faf7fb>
+			<p align="right"><b>Improved exclusion upon checkout and update</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">Context exclusion has been improved for scenarios such as CVS checkout where a large number of files are brought into the workspace.
+			Formerly all files would pollute the currently active task context. This has be greatly improved so that only explicitly created resources are contributed to the active task context.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/focus-exclude-checkout.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+
 <p>&nbsp;</p>
 <h2><a name="wikitext">WikiText</a></h2>
 
@@ -643,44 +681,6 @@ before installing Mylyn 3.2.</p>
 				<img src="images/3.1/wikitext-preferences.png"/>
 			</td></tr>
 			<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-			</table>
-
-<p>&nbsp;</p>
-<h2><a name="task-focused-interface">Task-Focused Interface</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Hidden Context Members</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The context page of the Task Editor shows elements that can not be presented in the common navigator in a separate table.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.2.0/context-hidden-elements.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table409">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#faf7fb>
-			<p align="right"><b>Improved exclusion upon checkout and update</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Context exclusion has been improved for scenarios such as CVS checkout where a large number of files are brought into the workspace.
-			Formerly all files would pollute the currently active task context. This has be greatly improved so that only explicitly created resources are contributed to the active task context.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.1/focus-exclude-checkout.png"></td>
-		</tr>
-		<tr>
 			<td colspan="2">
 			<hr>
 			</td>
