NEW - bug 282219: update Trac FAQ https://bugs.eclipse.org/bugs/show_bug.cgi?id=282219

--- a/new/new.html
+++ b/new/new.html
@@ -865,7 +865,7 @@ before installing Mylyn 3.2.</p>
 			<p align="right"><b>Trac 0.11</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">The Trac Connector now supports Trac 0.11 if the latest version of Trac's <a href="http://trac-hacks.org/wiki/XmlRpcPlugin" target="_blank">XmlRpcPlugin</a> is installed on the repository.</p>
+			<p align="left">The Trac Connector now supports Trac 0.11 if a current version of Trac's <a href="http://trac-hacks.org/wiki/XmlRpcPlugin" target="_blank">XmlRpcPlugin</a> is installed on the repository. Note: Version 1.0.6 (r6144) or later of the XmlRpcPlugin is recommended.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.2.0/trac-workflow.png"></td>
 		</tr>
