NEW - bug 291146: create New & Noteworthy for Mylyn 3.3 https://bugs.eclipse.org/bugs/show_bug.cgi?id=291146

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -9,7 +9,16 @@
 <hr>
 
 <ul>
-<li>No entries.
+<li>Do not prompt to download context if only a single one is available (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250869">bug 250869</a>)
+<li>Make it more simple to reassign to self (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=236977">bug 236977</a>)
+<li>Show description in preview mode for existing tasks with editable descriptions (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256699">bug 256699</a>)
+<li>Support sorting by rank under a query (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260897">bug 260897</a>)
+<li>Limit configuration refresh in the JIRA task editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290490">bug 290490</a>)
+<li>Improve speed of JIRA searches and query performance (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=237996">bug 237996</a>)
+<li>API: Improve support for propagating sync status for connectors that support multi bug retrieval (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=268467">bug 268467</a>)
+<hr>
+<li>Only retrieve configuration for JIRA projects as needed (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290860">bug 290860</a>)
+<li>Support setting the visibility of JIRA comments (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211654">bug 211654</a>)
 </ul>
 
 </body>
