NEW - bug 291146: create New & Noteworthy for Mylyn 3.3 https://bugs.eclipse.org/bugs/show_bug.cgi?id=291146

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -19,6 +19,9 @@
 <hr>
 <li>Only retrieve configuration for JIRA projects as needed (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=290860">bug 290860</a>)
 <li>Support setting the visibility of JIRA comments (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211654">bug 211654</a>)
+<hr>
+<li>The mouse wheels scrolls the task editor when hovering over text fields and combo boxes (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=202709">bug 202709</a>)
+<li>The CDT structure bridge to has moved from the CDT update site to the Mylyn update site (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=283445">bug 283445</a>)
 </ul>
 
 </body>
