NEW - bug 291146: create New & Noteworthy for Mylyn 3.3 https://bugs.eclipse.org/bugs/show_bug.cgi?id=291146

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -100,6 +100,7 @@ before installing Mylyn 3.3.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.3</span> </p>
 <ul>
+    <li><a href="#timing"><b>Task Timing (1)</b></a></li>
 	<li><a href="#cdt">C/C++ Development Tooling (1)</a></li>
 	<li><a href="#connector-discovery">Connector Discovery</a></li>
 	<li><a href="#general">General</a></li>
@@ -113,6 +114,26 @@ before installing Mylyn 3.3.</p>
 	<li><a href="#framework">Framework and API (1)</a></li>
 </ul>
 
+
+
+
+<p>&nbsp;</p>
+<h2><a name="timing">Changes to Task Timing</a></h2>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>TODO</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">TODO</p>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
 
 <p>&nbsp;</p>
 <h2><a name="cdt">C/C++ Development Tooling for Mylyn</a></h2>
