--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -21,7 +21,7 @@
 	</tr>
 </table>
 
-<p><b>DRAFT</b></p>
+<h1>DRAFT (partial content)</h1>
 
 <p><b>Also see the New &amp; Noteworthy for: 
 <a href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, 
@@ -58,10 +58,13 @@ before installing Mylyn 3.3.</p>
 <table cellpadding="10" cellspacing="0" id="table415">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Time Tracking Disabled By Default</b></p>
+			<p align="right"><b>Time Tracking Preference</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">Tracking of the active time can now be disabled in the preferences under Tasks.</p>
+			<p align="left">Time tracking is optional in the sense that users currently do not need to
+use it, and the information is private, but it was not possible to use both focusing and
+time tracking since Mylyn did not have a separate preference. To give developers a better sense
+ of control a preference is now available under Tasks which is disabled by default.</p>
 			<img border="0" src="images/3.3/time-tracking.png">
 			</td>
 		</tr>
