--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -38,8 +38,8 @@ before installing Mylyn 3.3.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.3</span> </p>
 <ul>
-    <li><a href="#timing"><b>Time Tracking (1)</b></a></li>
-	<li><a href="#cdt">C/C++ Development Tooling (1)</a></li>
+    <!--<li><a href="#timing"><b>Time Tracking (1)</b></a></li>-->
+	<li><a href="#cdt">C/C++ Development Tooling (3)</a></li>
 	<li><a href="#task-editor">Task Editor (3)</a></li>
 	<li><a href="#task-list">Task List (2)</a></li>
 	<li><a href="#task-focused-interface">Task-Focused Interface (1)</a></li>
@@ -52,6 +52,7 @@ before installing Mylyn 3.3.</p>
 
 
 
+<!--
 <p>&nbsp;</p>
 <h2><a name="timing">Changes to Time Tracking</a></h2>
 
@@ -74,6 +75,7 @@ time tracking since Mylyn did not have a separate preference. To give developers
 			</td>
 		</tr>
 </table>
+-->
 
 <p>&nbsp;</p>
 <h2><a name="cdt">C/C++ Development Tooling</a></h2>
@@ -86,6 +88,40 @@ time tracking since Mylyn did not have a separate preference. To give developers
 			<td valign="top" width="85%">
 			<p align="left">The CDT Structure Bridge is now hosted within the Mylyn project. Users who already have the CDT Mylyn Bridge installed can update to the latest version from the update site.</p>
 			<img border="0" src="images/3.3/cdt-bridge.png">
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>CDT Editor Code Folding</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">Elements in your task context will be automatically unfolded when they are interesting and uninteresting elements will be folding to reduce the amount of code overload in large files.</p>
+			<img border="0" src="images/3.3/cdt-code-folding.png">
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>CDT Focused Content Assist</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">The top of the CDT content assist menu will have the items that are in your task context on top of the list, enabling quick selection via arrow keys.</p>
+			<img border="0" src="images/3.3/cdt-content-assist.png">
 			</td>
 		</tr>
 		<tr>
