--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -43,7 +43,7 @@ before installing Mylyn 3.3.</p>
 	<li><a href="#task-editor">Task Editor (3)</a></li>
 	<li><a href="#task-list">Task List (2)</a></li>
 	<li><a href="#task-focused-interface">Task-Focused Interface (1)</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
+	<!--<li><a href="#wikitext">WikiText</a></li>-->
 	<li><a href="#jira">JIRA Connector (3)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (1)</a></li>
 	<li><a href="#framework">Framework and API (3)</a></li>
@@ -241,12 +241,12 @@ time tracking since Mylyn did not have a separate preference. To give developers
 		</tr>
 
 </table>
-
+<!-- 
 <p>&nbsp;</p>
 <h2><a name="wikitext">WikiText</a></h2>
 
 TBD
-
+-->
 <p>&nbsp;</p>
 <h2><a name="jira">JIRA Connector</a></h2>
 
