--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -38,7 +38,7 @@ before installing Mylyn 3.3.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.3</span> </p>
 <ul>
-    <li><a href="#timing"><b>Time Tracking (1)</b></a></li>
+    <li><a href="#timing">Time Tracking (1)</a></li>
 	<li><a href="#cdt">C/C++ Development Tooling (3)</a></li>
 	<li><a href="#task-editor">Task Editor (3)</a></li>
 	<li><a href="#task-list">Task List (2)</a></li>
