--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -352,10 +352,10 @@ TBD
 		
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Query Validation</b></p>
+			<p align="right"><b>Error Messages</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">Query dialogs no longer present errors upon opening and present errors in the order fields appear within the page.</p>
+			<p align="left">Repository settings and query pages no longer present errors upon opening and present errors in the order fields appear within the page.</p>
 			</td>
 		</tr>
 		<tr>
@@ -363,7 +363,7 @@ TBD
 			<hr>
 			</td>
 		</tr>
-		
+
 </table>
 
 </body>
