--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -60,10 +60,13 @@ before installing Mylyn 3.3.</p>
 			<p align="right"><b>Time Tracking Preference</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">Time tracking is optional in the sense that users currently do not need to
-use it, and the information is private, but it was not possible to use both focusing and
-time tracking since Mylyn did not have a separate preference. To give developers a better sense
- of control a preference is now available under Tasks which is disabled by default.</p>
+			<p align="left">
+			Time tracking can now be turned off independently of focusing.  Time tracking has 
+			always been optional and private since it required task activation and stored
+			all tracking information in the workspace. 
+			But it was not previously possible to use focusing without active time being captured.  Note that
+			the preference is off by default, since Mylyn makes all activity tracking and
+			automation opt-in.</p>
 			<img border="0" src="images/3.3/time-tracking.png">
 			</td>
 		</tr>
@@ -84,7 +87,10 @@ time tracking since Mylyn did not have a separate preference. To give developers
 			<p align="right"><b>CDT Bridge Moved to Mylyn</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">The CDT Structure Bridge is now hosted within the Mylyn project. Users who already have the CDT Mylyn Bridge installed can update to the latest version from the update site.</p>
+			<p align="left">The CDT Bridge has been extended, improved and is now a part of the Mylyn
+			project as a reference implementation for focusing, to complement the Java Bridge.
+			Users who already 
+			have the CDT Mylyn Bridge installed can update to the latest version from the update site.</p>
 			<img border="0" src="images/3.3/cdt-bridge.png">
 			</td>
 		</tr>
@@ -138,7 +144,8 @@ time tracking since Mylyn did not have a separate preference. To give developers
 			<p align="right"><b>Easily Add Self</b></p>
 			</td>
 			<td valign="top" width="85%">
-			<p align="left">Users can now easily insert their address to person fields within the task editor. Click the gold person button that appears within these fields to insert your user id.</p>
+			<p align="left">You can easily insert your address to person fields within the task editor. 
+			Click the gold person button that appears within these fields to insert your user id.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.3/task-editor-insert-self.png">
 			</td>
@@ -167,7 +174,7 @@ time tracking since Mylyn did not have a separate preference. To give developers
 
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Scrolling in Task Editor</b></p>
+			<p align="right"><b>Improved Scrolling</b></p>
 			</td>
 			<td valign="top" width="85%">
 			<p align="left">Using the scroll wheel when hovering the description or combo fields now scrolls the editor.</p>
