--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -16,8 +16,8 @@
 		<i>Oct 26, 2009</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">?</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1"></font></td>
+		<font size="1">163 </font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Thomas Ehrnhoefer and Pawel Niewiadomski contributed numerous bug fixes and improvements for the JIRA connector. Additional contributions were provided by Jacek Jaroczynski, Benjamin Muskalla, Martin Kurz, David Shepherd and Emerson Murphy-Hill.</font></td>
 	</tr>
 </table>
 
@@ -34,13 +34,11 @@ before installing Mylyn 3.3.</p>
 
 <hr>
 
-<h1>DRAFT (partial content)</h1>
-
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.3</span> </p>
 <ul>
     <li><a href="#timing">Time Tracking (1)</a></li>
 	<li><a href="#cdt">C/C++ Development Tooling (3)</a></li>
-	<li><a href="#task-editor">Task Editor (3)</a></li>
+	<li><a href="#task-editor">Task Editor (4)</a></li>
 	<li><a href="#task-list">Task List (2)</a></li>
 	<li><a href="#task-focused-interface">Task-Focused Interface (1)</a></li>
 	<!--<li><a href="#wikitext">WikiText</a></li>-->
@@ -178,6 +176,22 @@ before installing Mylyn 3.3.</p>
 			</td>
 			<td valign="top" width="85%">
 			<p align="left">Using the scroll wheel when hovering the description or combo fields now scrolls the editor.</p>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+		
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Improved Date Selection</b></p>
+			</td>
+			<td valign="top" width="85%">
+			<p align="left">The chooser for due dates has been streamlined to support a non-modal workflow.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.3/date-chooser.png">
 			</td>
 		</tr>
 		<tr>
@@ -335,6 +349,8 @@ TBD
 			</td>
 			<td valign="top" width="85%">
 			<p align="left">The discovery UI has been componentized to better support reuse.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.3/discovery.png">
 			</td>
 		</tr>
 		<tr>
