--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,395 +1,18 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
-	<tr>
-		<td bgcolor="#595791" width="7%" align="center"><b>
-		<font color="#FFFFFF" size="1">Release</font></b></td>
-		<td bgcolor="#595791" width="5%" align="center"><b>
-		<font color="#FFFFFF" size="1">Resolved 
-		</font></b></td>
-		<td bgcolor="#595791" width="*" align="center"><b>
-		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
-	</tr>
-	<tr>
-		<td bgcolor="#E0D0E6"><font size="1">3.3<br>
-		<i>Oct 26, 2009</i></font></td>
-		<td bgcolor="#E0D0E6" align="center">
-		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">163 </font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">Thomas Ehrnhoefer and Pawel Niewiadomski contributed numerous bug fixes and improvements for the JIRA connector. Additional contributions were provided by Jacek Jaroczynski, Benjamin Muskalla, Martin Kurz, David Shepherd and Emerson Murphy-Hill.</font></td>
-	</tr>
-</table>
+<p><b>New &amp; Noteworthy for Mylyn Weekly Builds</b></p>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, 
-<a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
-<a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
-<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
-Mylyn 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
-Mylyn 0.3</a></b></p>
-<p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 
-before installing Mylyn 3.3.</p>
+<p>Also see the New &amp; Noteworthy for: 
+<a href="http://eclipse.org/mylyn/new/">Mylyn 3.3</a></p>
 
 <hr>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.3</span> </p>
 <ul>
-    <li><a href="#timing">Time Tracking (1)</a></li>
-	<li><a href="#cdt">C/C++ Development Tooling (3)</a></li>
-	<li><a href="#task-editor">Task Editor (4)</a></li>
-	<li><a href="#task-list">Task List (2)</a></li>
-	<li><a href="#task-focused-interface">Task-Focused Interface (1)</a></li>
-	<!--<li><a href="#wikitext">WikiText</a></li>-->
-	<li><a href="#jira">JIRA Connector (3)</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector (1)</a></li>
-	<li><a href="#framework">Framework and API (3)</a></li>
+<li>The activated task is opened when shift is pressed when selecting a task for the activation history (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294820">bug 294820</a>)
+<li>Clone is available from the new menu of the task editor popup (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292337">bug 292337</a>)
+<hr size="1">
 </ul>
-
-
-
-<p>&nbsp;</p>
-<h2><a name="timing">Changes to Time Tracking</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Time Tracking Preference</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">
-			Time tracking can now be turned off independently of focusing.  Time tracking has 
-			always been optional and private since it required task activation and stored
-			all tracking information in the workspace. 
-			But it was not previously possible to use focusing without active time being captured.  Note that
-			the preference is off by default, since Mylyn makes all activity tracking and
-			automation opt-in.</p>
-			<img border="0" src="images/3.3/time-tracking.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-
-<p>&nbsp;</p>
-<h2><a name="cdt">C/C++ Development Tooling</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>CDT Bridge Moved to Mylyn</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The CDT Bridge has been extended, improved and is now a part of the Mylyn
-			project as a reference implementation for focusing, to complement the Java Bridge.
-			Users who already 
-			have the CDT Mylyn Bridge installed can update to the latest version from the update site.</p>
-			<img border="0" src="images/3.3/cdt-bridge.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>CDT Editor Code Folding</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Elements in your task context will be automatically unfolded when they are interesting and uninteresting elements will be folding to reduce the amount of code overload in large files.</p>
-			<img border="0" src="images/3.3/cdt-code-folding.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>CDT Focused Content Assist</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The top of the CDT content assist menu will have the items that are in your task context on top of the list, enabling quick selection via arrow keys.</p>
-			<img border="0" src="images/3.3/cdt-content-assist.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p>&nbsp;</p>
-<h2><a name="task-editor">Task Editor</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table403">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Easily Add Self</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">You can easily insert your address to person fields within the task editor. 
-			Click the gold person button that appears within these fields to insert your user id.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/task-editor-insert-self.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Description Preview</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">For connectors that support editable descriptions, the description will render in preview mode by default and switch to edit mode upon clicking.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/task-editor-description-preview.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Improved Scrolling</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Using the scroll wheel when hovering the description or combo fields now scrolls the editor.</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-		
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Improved Date Selection</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The chooser for due dates has been streamlined to support a non-modal workflow.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/date-chooser.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p>&nbsp;</p>
-<h2><a name="task-list">Task List</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Sorting by Rank</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The Task List can now be sorted based on rank if supported by the repository. The default sort is by priority, rank and then date created.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/tasklist-sort-rank.png">
-			</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Filtering of Completed Tasks</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Toggling filtering of completed tasks is now available from the Task List toolbar.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/tasklist-filter-completed.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p>&nbsp;</p>
-<h2><a name="task-focused-interface">Task-Focused Interface</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-	
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Context Download</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Upon activating a task, the user is now asked if they wish to download the latest context without requiring selection from a list.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/download-context.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-
-</table>
-<!-- 
-<p>&nbsp;</p>
-<h2><a name="wikitext">WikiText</a></h2>
-
-TBD
--->
-<p>&nbsp;</p>
-<h2><a name="jira">JIRA Connector</a></h2>
-
-<table cellpadding="10" cellspacing="0" id="table403">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Search and Query Performance Improvements</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Query and search will now appear much quicker.</p>
-			<img border="0" src="images/3.3/jira-search.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Project Configuration Performance Improvements</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Project configurations are now retrieved as needed and updated incrementally, alleviating the performance impact that can result from large configurations and when connecting to a repository that hosts many projects.</p>
-			<img border="0" src="images/3.3/jira-new-task.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Improved Version and Component Chooser</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Versions and Components can now be selected from a filtered list. Only the selected values are displayed in the Task Editor.</p>
-			<img border="0" src="images/3.3/jira-version-chooser.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-
-
-<p>&nbsp;</p>
-<h2><a name="bugzilla">Bugzilla Connector</a></h2>
-
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>QA Contact</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The Bugzilla Search page now allows searching over the QA Contact field.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/bugzilla-search.png"></td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-</table>
-
-<p>&nbsp;</p>
-<h2><a name="framework">Framework and API</a></h2>
-
-<p>See <a href=" http://wiki.eclipse.org/Mylyn/Porting_Guide#Notable_API_changes_in_3.3">porting guide</a> for additional notes on API changes.</p>
-
-<table cellpadding="10" cellspacing="0" id="table415">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Reuse of Discovery Framework</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">The discovery UI has been componentized to better support reuse.</p>
-			<p class="MsoPlainText">
-			<img border="0" src="images/3.3/discovery.png">
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-				
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Propagation of Sync Status</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Connectors that are capable of retrieving multiple TaskData objects in a single request now have a means to update the status for each through addition of TaskDataCollector.failed(String taskId, IStatus status).</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-		
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Error Messages</b></p>
-			</td>
-			<td valign="top" width="85%">
-			<p align="left">Repository settings and query pages no longer present errors upon opening and present errors in the order fields appear within the page.</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-			<hr>
-			</td>
-		</tr>
-
-</table>
 
 </body>
 </html>
-
-
