RESOLVED - bug 294383: WikiText: add configuration option to wikitext-to-html ant task to disable writing DOCTYPE declaration https://bugs.eclipse.org/bugs/show_bug.cgi?id=294383

--- a/new/new.html
+++ b/new/new.html
@@ -16,15 +16,15 @@
 		<i>Dec 15, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">39 </font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#FAF7FB"><font size="1">Benjamin Muskalla and Peter Stibrany contributed bug fixes.</font></td>
+		<font size="1">38 </font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Benjamin Muskalla contributed bug fixes.</font></td>
 	</tr>
 	<tr>
 		<td bgcolor="#E0D0E6"><font size="1">3.3<br>
 		<i>Oct 26, 2009</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">163 </font><br><font size="1">bugs</font></a></td>
+		<font size="1">166 </font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Thomas Ehrnhoefer and Pawel Niewiadomski contributed numerous bug fixes and improvements for the JIRA connector. Additional contributions were provided by Jacek Jaroczynski, Benjamin Muskalla, Martin Kurz, David Shepherd and Emerson Murphy-Hill.</font></td>
 	</tr>
 </table>
