--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -12,6 +12,14 @@
 		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
 	</tr>
 	<tr>
+		<td bgcolor="#FAF7FB"><font size="1">3.2.3<br>
+		<i>Feb 17, 2010</i></font></td>
+		<td bgcolor="#FAF7FB" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.2.3&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">7</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#FAF7FB"><font size="1">Service release.</font></td>
+	</tr>
+	<tr>
 		<td bgcolor="#FAF7FB"><font size="1">3.2.2<br>
 		<i>Sep 25, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
@@ -24,7 +32,7 @@
 		<i>July 22, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.2.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">40</font><br><font size="1">bugs</font></a></td>
+		<font size="1">39</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Thomas Ehrnhoefer contributed patches for JIRA and the tasks framework. Additional fixes were contributes by Darren Tarbard, Holger Voormann, Kevin Barnes, Hiroyuki Inaba, Philippe Marschall, Peter Stibrany and David Shepherd.</font></td>
 	</tr>
 	<tr>
@@ -32,7 +40,7 @@
 		<i>June 24, 2009</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.2&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">334</font><br><font size="1">bugs</font></a></td>
+		<font size="1">338</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#E0D0E6"><font size="1">Thomas Ehrnhoefer contributed 10 patches improving both the JIRA connector and tasks framework. Hiroyuki Inaba enhanced the screen capture capability. Peter Stibrany added support for saving multiple attachments. Additional contributions were provided by David Shepherd, Leo Dos Santos and Remy Chi Jian Suen, Peter Friese, Jingwen Ou, Maarten Meijer and Daniel Migowski.</font></td>
 	</tr>
 	<tr>
@@ -48,7 +56,7 @@
 		<i>Mar 17, 2009</i></font></td>
 		<td bgcolor="#FAF7FB" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">432</font><br><font size="1">bugs</font></a></td>
+		<font size="1">437</font><br><font size="1">bugs</font></a></td>
 		<td bgcolor="#FAF7FB"><font size="1">Hiroyuki Inaba provided 57 patches for externalizing messages and user interface improvements, Frank Becker contributed 
 		40 patches that improved the Bugzilla Connector and tasks framework. Shawn Minto and David Shepherd provided numerous patches for
 		the tasks and context framework and Thomas Ehrnhoefer provided improvements for the JIRA connector. Additional contributions were 
