bug 303578: [releng] update weekly new & noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=303578

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -13,6 +13,34 @@
 <li>Clone is available from the new menu of the task editor popup (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292337">bug 292337</a>)
 <hr size="1">
 </ul>
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=292337'>bug 292337</a>: [editor] add clone item menu to task editor context menu
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=238006'>bug 238006</a>: TaskAttributeMapper.getDefaultOption() is not used
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=294820'>bug 294820</a>: open task when shift is pressed on task activation from history
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=296913'>bug 296913</a>: support sorting by due date
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=297150'>bug 297150</a>: add support for wild cards in task content assist
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=299697'>bug 299697</a>: [editor] implement preference to enable current line highlight in task editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=216557'>bug 216557</a>: [api] add option to "Replace existing attachment of the same name" when attaching files
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=255003'>bug 255003</a>: [api] allow empty password on repository properties page
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=292330'>bug 292330</a>: [framework] HighlighterImageDescriptor should not hold on to image
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=297254'>bug 297254</a>: [patch][api] allow disabling of repository creation for a connector
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=290026'>bug 290026</a>: [Markup Editor] support for custom templates and autocl
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=297057'>bug 297057</a>: No Preference to set the font for the WikiText Editor is available
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=299669'>bug 299669</a>: show wikitext strikethrough style in editing mode
+</ul>
+<hr size='1'>
+
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=164221'>bug 164221</a>: recognize comment#number link on bug editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=272207'>bug 272207</a>: Include iplog flag for patches on bugzilla task editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=290197'>bug 290197</a>: [ui] refactor bugzilla search query page layout
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=294957'>bug 294957</a>: [api] move support extension into API
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=296963'>bug 296963</a>: [api] allow different URL's for opening task in browser and copying task details
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=299838'>bug 299838</a>: Generation of Eclipse Help content from a MediaWiki
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=301756'>bug 301756</a>: [api][editor] provide method for selecting and revealing elements in the task editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=303053'>bug 303053</a>: Support links between WikiText source files
+</ul>
+<hr size='1'>
 
 </body>
 </html>
