bug 303578: [releng] update weekly new & noteworthy https://bugs.eclipse.org/bugs/show_bug.cgi?id=303578

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -6,13 +6,8 @@
 <p>Also see the New &amp; Noteworthy for: 
 <a href="http://eclipse.org/mylyn/new/">Mylyn 3.3</a></p>
 
-<hr>
+<hr size='1'>
 
-<ul>
-<li>The activated task is opened when shift is pressed when selecting a task for the activation history (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=294820">bug 294820</a>)
-<li>Clone is available from the new menu of the task editor popup (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=292337">bug 292337</a>)
-<hr size="1">
-</ul>
 <ul>
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=292337'>bug 292337</a>: [editor] add clone item menu to task editor context menu
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=238006'>bug 238006</a>: TaskAttributeMapper.getDefaultOption() is not used
@@ -28,6 +23,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=297057'>bug 297057</a>: No Preference to set the font for the WikiText Editor is available
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=299669'>bug 299669</a>: show wikitext strikethrough style in editing mode
 </ul>
+
 <hr size='1'>
 
 <ul>
@@ -40,6 +36,7 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=301756'>bug 301756</a>: [api][editor] provide method for selecting and revealing elements in the task editor
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=303053'>bug 303053</a>: Support links between WikiText source files
 </ul>
+
 <hr size='1'>
 
 </body>
