bug 221939: [releng] manage branches https://bugs.eclipse.org/bugs/show_bug.cgi?id=221939

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -39,5 +39,9 @@
 
 <hr size='1'>
 
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=305199'>bug 305199</a>: show Windows Task Bar progress for manually triggered synchronizations
+</ul>
+
 </body>
 </html>
