313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -43,5 +43,23 @@
 <li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=305199'>bug 305199</a>: show Windows Task Bar progress for manually triggered synchronizations
 </ul>
 
+<hr size='1'>
+
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=298156'>bug 298156</a>: [api] provide method for canceling HTTP requests without blocking
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=298688'>bug 298688</a>: [context] support ant filters for resource monitoring exclusions
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=178474'>bug 178474</a>: [api] open corresponding task should highlight or expand comment number
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=290197'>bug 290197</a>: [ui] refactor bugzilla search query page layout
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=299838'>bug 299838</a>: Generation of Eclipse Help content from a MediaWiki
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=301756'>bug 301756</a>: [api][editor] provide method for selecting and revealing elements in the task editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=304086'>bug 304086</a>: [framework] decouple tasks.ui from org.eclipse.search
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=304755'>bug 304755</a>: [releng] provide support feature for connector that depend on org.eclipse.mylyn.commons.net
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308737'>bug 308737</a>: [api] provide generic XML-RPC transport layer
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=308830'>bug 308830</a>: Can't copy name of a commenter from a task
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=311634'>bug 311634</a>: [api] allow connectors to provide alternate IEditorInput
+</ul>
+
+<hr size='1'>
+
 </body>
 </html>
