313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -61,5 +61,14 @@
 
 <hr size='1'>
 
+<ul>
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=220314'>bug 220314</a>: double click on repository attachment does not respect default workbench editor
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=278102'>bug 278102</a>: add quick outline to task editor and provide quick access to related tasks
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=296441'>bug 296441</a>: [key-binding] provide shortcut for inserting id of activate task
+<li><a href='https://bugs.eclipse.org/bugs/show_bug.cgi?id=304910'>bug 304910</a>: [api] recognize comment#number link on bug editor without bug number too
+</ul>
+
+<hr size='1'>
+
 </body>
 </html>
