NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -266,6 +266,15 @@
 		</td>
 	</tr>
 	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Color for Overdue Tasks Owned by Others</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">A new color preference to highlight overdue tasks owned by others has been added in the Color and Fonts preferences.</p>
+		<p><img border="0" src="images/3.4/overdue-color-preference.png"></p>		
+		</td>
+	</tr>
+	<tr>
 		<td colspan="2">
 		<hr>
 		</td>
@@ -571,6 +580,27 @@
 
 
 <p>&nbsp;</p>
+<h2><a name="trac">Trac Connector</a></h2>
+
+<table cellpadding="10" cellspacing="0">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>Replace Existing Attachments Option</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">The attachment dialog provides an option to override attachments with the same name.</p>
+		<p><img border="0" src="images/3.4/task-attachment-override.png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr>
+		</td>
+	</tr>
+</table>
+
+
+<p>&nbsp;</p>
 <h2><a name="cdt">C/C++ Development Tooling</a></h2>
 
 <table cellpadding="10" cellspacing="0">
@@ -667,7 +697,6 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left"><code>TaskAttachmentPage.setNeedsReplaceExisting(true)</code> can be used to enable a checkbox for overriding attachments with the same name.</p>
-		<p><img border="0" src="images/3.4/task-attachment-override.png"></p>
 		</td>
 	</tr>
 	<tr>
