NEW - bug 313422: create New & Noteworthy for Mylyn 3.4 https://bugs.eclipse.org/bugs/show_bug.cgi?id=313422

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -70,14 +70,15 @@
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.4</span> </p>
 <ul>
     <li><a href="#timing">Time Tracking</a></li>
-	<li><a href="#task-editor">Task Editor</a></li>
-	<li><a href="#task-list">Task List</a></li>
-	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
-	<li><a href="#wikitext">WikiText</a></li>
-	<li><a href="#bugzilla">Bugzilla Connector</a></li>
+	<li><a href="#task-editor">Task Editor (5)</a></li>
+	<li><a href="#task-list">Task List (5)</a></li>
+	<li><a href="#task-focused-interface">Task-Focused Interface (2)</a></li>
+	<li><a href="#wikitext">WikiText (6)</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector (4)</a></li>
+	<li><a href="#bugzilla">Trac Connector (1)</a></li>
 	<li><a href="#cdt">C/C++ Development Tooling</a></li>
-	<li><a href="#incubator">Incubator</a></li>
-	<li><a href="#framework">Framework and API</a></li>
+	<li><a href="#incubator">Incubator (1)</a></li>
+	<li><a href="#framework">Framework and API (5)</a></li>
 </ul>
 
 <p><b>Note: </b>The Mylyn JIRA Connector <a href="http://wiki.eclipse.org/index.php/Mylyn_FAQ#What_happened_to_the_Mylyn_JIRA_Connector.3F">has moved to Atlassian</a> and the Trac connector is now available from the main e3.4 update site. The extras update site has been removed.
@@ -161,6 +162,7 @@
 		</td>
 		<td valign="top" width="85%">
 		<p align="left">The Task Editor now supports cloning of tasks from the popup menu.</p>
+		<p><img border="0" src="images/3.4/task-editor-clone.png"></p>
 		</td>
 	</tr>
 	<tr>
